--- a/config/conf.d/default.conf
+++ b/config/conf.d/default.conf
@@ -1,6 +1,6 @@
 server{
   listen 80;
-  server_name 127.0.0.1; # 公网ip
+  server_name 127.0.0.1;
   index  index.php index.html index.htm;
 
   location /api1 {
@@ -11,16 +11,10 @@ server{
   }
 
   location /api2 {
-    proxy_pass  http://api2; # 或 http://www.baidu.com
-    # proxy_set_header Host $proxy_host;
-    # proxy_set_header X-Real-IP $remote_addr;
-    # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_pass  http://api2;
   }
 
   location /api3 {
-    proxy_pass  http://api3; # 或 http://www.baidu.com
-    # proxy_set_header Host $proxy_host;
-    # proxy_set_header X-Real-IP $remote_addr;
-    # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_pass  http://api3;
   }
 }
